--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Qwitcher+Grypen:wght@400;700&display=swap');
+
 /* Reset some default styles */
 body, h1, h2, p, ul, li {
     margin: 0;
@@ -19,6 +21,14 @@ body {
 
 .header h1 {
     margin-bottom: 10px;
+    font-family: "Qwitcher Grypen", cursive;
+    font-size: 5rem;
+}
+
+.header h2 {
+    margin-bottom: 10px;
+    font-family: "Qwitcher Grypen", cursive;
+    font-size: 2rem;
 }
 
 .header nav ul {
@@ -33,6 +43,10 @@ body {
 .header nav ul li a {
     text-decoration: none;
     color: #fff;
+}
+
+.header nav ul li a:hover {
+    text-decoration: underline;
 }
 
 /* Main styles */
@@ -53,8 +67,16 @@ body {
     width: calc(33.33% - 20px);
 }
 
+.product-card:hover {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+}
+
 .product-card img {
     max-width: 100%;
+}
+
+.product-card h2 {
+    font-family: serif;
 }
 
 /* Footer styles */
