--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
 
 .header nav ul li a:hover {
     text-decoration: underline;
+    cursor: pointer;
 }
 
 /* Main styles */
@@ -69,6 +70,7 @@ body {
 
 .product-card:hover {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
 }
 
 .product-card img {
@@ -77,6 +79,11 @@ body {
 
 .product-card h2 {
     font-family: serif;
+}
+
+.product-card h2 a:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 /* Footer styles */
